made stuff a bit clearer

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -55,17 +55,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian Naive Bayes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.37710855e-201, 1.59974021e-006, 9.99998400e-001]])"
+       "0.9666666666666667"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,9 +91,14 @@
     "\n",
     "nb = NaiveBayes(param_func=mean_var, prob_func=gauss).fit(X_train, y_train)\n",
     "y_pred = nb.predict(X_test)\n",
-    "(y_pred == y_test).mean()\n",
-    "\n",
-    "nb.predict_proba(X_test[0])"
+    "(y_pred == y_test).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bernoulli Naive Bayes"
    ]
   },
   {
@@ -147,13 +159,6 @@
    "source": [
     "nb.predict_proba([1,0,1,1,0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
