few changes in comments

--- a/r.ipynb
+++ b/r.ipynb
@@ -452,8 +452,8 @@
    "source": [
     "# make a prediction by looping over each individual sample\n",
     "y_pred <- lapply(1:nrow(X_test), \\(i) as.matrix(X_test[i,]) |>\n",
-    "  matrix(ncol=4) |>                               # shape the sample so that it broadcasts\n",
-    "  dnorm(mean = mus, sd = sigmas, log = TRUE) |>   # calculate the pd for the different features over all classes\n",
+    "  matrix(ncol=4) |>                               # shape the sample so that it broadcasts correctly\n",
+    "  dnorm(mean = mus, sd = sigmas, log = TRUE) |>   # calculate the pd for the various features over all classes\n",
     "  colSums() |>                                    # sum the pds\n",
     "  (\\(x) x + log(thetas))() |>                     # add class probabilities (sometimes refered to as priors)\n",
     "  which.max()                                     # predict the class\n",
