--- a/r.ipynb
+++ b/r.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 989,
+   "execution_count": 1005,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -669,7 +669,7 @@
    "outputs": [],
    "source": [
     "library('stopwords')\n",
-    "dat = readLines('data/train.txt')\n",
+    "dat = readLines('https://raw.githubusercontent.com/arthurratz/bayes_classifier_multi/main/bayes_classifier_multi/dataset/trainset.txt')\n",
     "\n",
     "# maximum vocabulary size, the other words will be discarded\n",
     "max_words <- 100\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 995,
+   "execution_count": 1006,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -722,7 +722,7 @@
     "  beta = rep(1, max_words)  # word prior\n",
     ")\n",
     "\n",
-    "fit <- stan(file = 'model_multinomial.stan', data = data, chain = 4)"
+    "fit <- stan(file = 'model_multinomial.stan', data = data, iter = 20000)"
    ]
   },
   {
