--- a/Bayes_Scikit.ipynb
+++ b/Bayes_Scikit.ipynb
@@ -5,7 +5,7 @@
    "id": "49276642",
    "metadata": {},
    "source": [
-    "# Naive Bayes Classifier:"
+    "# Naive Bayes Classifier"
    ]
   },
   {
@@ -29,10 +29,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
     "from sklearn.naive_bayes import ComplementNB\n",
-    "from sklearn.naive_bayes import CategoricalNB\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from tqdm import tqdm"
+    "from sklearn.naive_bayes import GaussianNB"
    ]
   },
   {
@@ -40,7 +38,7 @@
    "id": "344f68e3",
    "metadata": {},
    "source": [
-    "# Checking mail spam:"
+    "## Checking mail spam:"
    ]
   },
   {
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "id": "b3b97950",
    "metadata": {},
    "outputs": [
@@ -160,13 +158,13 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"https://raw.githubusercontent.com/amankharwal/SMS-Spam-Detection/master/spam.csv\", encoding= 'latin-1')\n",
+    "data = pd.read_csv(\"data/spam.csv\", encoding= 'latin-1')\n",
     "data = data[[\"class\", \"message\"]]\n",
     "data"
    ]
@@ -176,12 +174,12 @@
    "id": "dfc3202d",
    "metadata": {},
    "source": [
-    "## Dataset Preparation"
+    "### Dataset Preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "id": "d67dff2e",
    "metadata": {},
    "outputs": [],
@@ -192,14 +190,6 @@
     "cv = CountVectorizer()\n",
     "x = cv.fit_transform(x)\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(x, y, test_size=0.2, random_state=42, shuffle = True)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "012270a2",
-   "metadata": {},
-   "source": [
-    "## Classification Models"
    ]
   },
   {
@@ -297,7 +287,7 @@
    "id": "3a0a8843",
    "metadata": {},
    "source": [
-    "### Using Complemnt Naive Bayes:"
+    "### Using Complement Naive Bayes:"
    ]
   },
   {
@@ -327,7 +317,7 @@
    "id": "b5a162f8",
    "metadata": {},
    "source": [
-    "# IMDB Sentiment Analysis:"
+    "## IMDB Sentiment Analysis:"
    ]
   },
   {
@@ -340,12 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "7d138400",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('IMDB_Dataset.csv')\n",
+    "df = pd.read_csv('data/IMDB_Dataset.csv')\n",
     "#https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews"
    ]
   },
@@ -491,14 +481,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27054dc1",
-   "metadata": {},
-   "source": [
-    "## Classification Models:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d9f59df2",
    "metadata": {},
    "source": [
@@ -608,7 +590,7 @@
    "id": "365778cb",
    "metadata": {},
    "source": [
-    "# Type of Raisin Detection:"
+    "## Type of Raisin Detection:"
    ]
   },
   {
@@ -618,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Raisin_Dataset.csv')"
+    "df = pd.read_csv('data/Raisin_Dataset.csv')"
    ]
   },
   {
@@ -829,7 +811,7 @@
    "id": "8761fbb1",
    "metadata": {},
    "source": [
-    "## Dataset Preparation:"
+    "### Dataset Preparation:"
    ]
   },
   {
@@ -842,14 +824,6 @@
     "x = np.array(df.drop(\"Class\", axis=1))\n",
     "y = np.array(df[\"Class\"])\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(x, y, test_size=0.2, random_state=42, shuffle = True)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ea5ccdf",
-   "metadata": {},
-   "source": [
-    "## Classification Models"
    ]
   },
   {
@@ -977,7 +951,7 @@
    "id": "cd025c23",
    "metadata": {},
    "source": [
-    "# Iris Dataset"
+    "## Iris Dataset"
    ]
   },
   {
@@ -1302,17 +1276,299 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "924c8eb8",
+   "metadata": {},
+   "source": [
+    "# Custom implementation\n",
+    "\n",
+    "In this part, we apply our knowledge of the naive Bayes classifier to create it from scratch. We will test a Bernoulli model and a Gaussian model, and compare these analytical approaches with the probabilistic approach taken in the stan notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8540fcf",
+   "metadata": {},
+   "source": [
+    "## Class definition\n",
+    "\n",
+    "First we define the classifier class. It takes the same shape as the sklearn classifiers, so understanding it is not vital."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db2b7223",
+   "execution_count": 12,
+   "id": "025aea94",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NaiveBayes:\n",
+    "  # all probabilities inside the class are log\n",
+    "\n",
+    "  def __init__(self, *, param_func, prob_func, param_priors=None):\n",
+    "    # user-provided function to compute the distribution parameters\n",
+    "    # the function should return an list of parameter arrays (...)\n",
+    "    self.param_func = param_func\n",
+    "\n",
+    "    # user-provided function to compute the probabilities from the parameters\n",
+    "    # the input are the parameter arrays and the X\n",
+    "    self.prob_func = prob_func\n",
+    "\n",
+    "    # hyperparameters of the parameter priors used by the prob_func in case a\n",
+    "    # Bayesian approach is taken\n",
+    "    self.param_priors = [param_priors] if param_priors is not None else []\n",
+    "\n",
+    "  def fit(self, X, y):\n",
+    "    # retrieve the number of samples and features from X\n",
+    "    self.n_samples, self.n_features = X.shape\n",
+    "\n",
+    "    # collect the individual classes, and record their counts to compute priors\n",
+    "    self.classes, counts = np.unique(y, return_counts=True)\n",
+    "\n",
+    "    # compute the parameters for every class - we transpose the array so that\n",
+    "    # the final dimensions are (parameters, classes, features)\n",
+    "    self.params = np.array(\n",
+    "      [self.param_func(X[c==y], *self.param_priors) for c in self.classes]\n",
+    "    ).transpose(1, 0, 2)\n",
+    "\n",
+    "    # compute the priors from the counts\n",
+    "    self.class_probs = np.log(counts/self.n_samples)\n",
+    "\n",
+    "    return self\n",
+    "\n",
+    "  def posteriors(self, X):\n",
+    "    # reshape X to fit the array dimensions (samples, classes, features)\n",
+    "    X = np.reshape(X, (-1, 1, self.n_features))\n",
+    "\n",
+    "    # compute the probabilities of the samples (...)\n",
+    "    probs = np.log(self.prob_func(X, *self.params[:,np.newaxis]))\n",
+    "    return probs.sum(axis=2) + self.class_probs[np.newaxis]\n",
+    "\n",
+    "  def predict_proba(self, X):\n",
+    "    # predict the probabilities for each class\n",
+    "    exp_post = np.exp(self.posteriors(X))\n",
+    "    return exp_post / exp_post.sum()\n",
+    "\n",
+    "  def predict(self, X):\n",
+    "    # predict the class with the maximum probability\n",
+    "    return self.classes[np.argmax(self.posteriors(X), axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85d6cb3e",
+   "metadata": {},
+   "source": [
+    "## Bernoulli model: toy dataset\n",
+    "\n",
+    "In order to test the Bernoulli model, we define a toy dataset. The reason is that only the Stan models quickly take too much time for larger datasets, and small real datasets are hard to comeby. Moreover, this dataset is fine for our purpose, which is mostly testing our analytical and Stan implementations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dc7e6328",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.19237241, 0.80762759]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define dataset\n",
+    "X = np.array([[0, 0, 1, 1, 1],\n",
+    "              [1, 0, 1, 1, 0],\n",
+    "              [1, 1, 0, 0, 1],\n",
+    "              [1, 1, 0, 0, 0],\n",
+    "              [0, 1, 0, 0, 1],\n",
+    "              [0, 0, 0, 1, 0],\n",
+    "              [1, 0, 0, 1, 1],\n",
+    "              [1, 1, 0, 0, 1],\n",
+    "              [1, 1, 1, 1, 0],\n",
+    "              [1, 1, 0, 1, 0],\n",
+    "              [1, 1, 0, 1, 1],\n",
+    "              [1, 0, 1, 1, 0],\n",
+    "              [1, 0, 1, 0, 0]])\n",
+    "y = 6*[0] + 7*[1]\n",
+    "\n",
+    "# initialize the class with to the proper functions and fit to the data\n",
+    "nb = NaiveBayes(\n",
+    "  param_func=lambda X: [X.mean(axis=0)],         # return probability of p(x_{k,c} = 1)\n",
+    "  prob_func=lambda x, phi: phi*x + (1-phi)*(1-x) # Bernoulli pmf\n",
+    ").fit(X, y)\n",
+    "\n",
+    "# we evaluate a random sample to compare with the Stan notebook\n",
+    "nb.predict_proba([1,0,1,1,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b34b64b",
+   "metadata": {},
+   "source": [
+    "### Bayesian version\n",
+    "\n",
+    "Now we take a Bayesian approach of the same function. Only the parameter function needs to be changed to instead return a MAP incorporating the prior defined by the hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aed9211c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_bernoulli(X, alpha):\n",
+    "  return [\n",
+    "    (X.sum(axis=0) + alpha[1] - 1) / (len(X) + alpha.sum(axis=0) - 2)\n",
+    "  ]\n",
+    "def bernoulli(x, phi):\n",
+    "  return theta*x + (1-phi)*(1-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd5346a",
+   "metadata": {},
+   "source": [
+    "We instantiate a new classifier with the specified functions and evaluate it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "de5af3bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.23601128, 0.76398872]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb = NaiveBayes(\n",
+    "  param_func=map_bernoulli,\n",
+    "  prob_func=bernoulli,\n",
+    "  param_priors=np.full((2, 5), 2)\n",
+    ").fit(X, y)\n",
+    "\n",
+    "nb.predict_proba([1,0,1,1,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5624371f",
+   "metadata": {},
+   "source": [
+    "As we might have expected, the probabilities tend more towards the center as the parameters are smoothed by their priors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3e99c4",
+   "metadata": {},
+   "source": [
+    "## Gaussian model: Raisin dataset\n",
+    "\n",
+    "Finally, we evaluate the Gaussian model using the raisin dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8a6b1d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/Raisin_Dataset.csv')\n",
+    "x = np.array(df.drop(\"Class\", axis=1))\n",
+    "y = np.array(df[\"Class\"])\n",
+    "xtrain, xtest, ytrain, ytest = train_test_split(x, y, test_size=0.2, random_state=42, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "975e2d15",
+   "metadata": {},
+   "source": [
+    "Define the parameter function returning the means and variances of the classes in the dataset and a gaussian function to calculate the probability densities of the according distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5986808f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_var(X):\n",
+    "  return [X.mean(axis=0), X.var(axis=0)]\n",
+    "def gauss(x, mean, var):\n",
+    "  return np.exp(-(x-mean)**2/(2*var)) / np.sqrt(var*2*np.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8064b834",
+   "metadata": {},
+   "source": [
+    "We center and scale the data to zero mean and unit variance according to the test set. This is to take the same approach as in the Stan notebook, where it is done to be able to use center normal priors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "95a23655",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8388888888888889"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler().fit(xtrain)\n",
+    "xtrain = scaler.transform(xtrain)\n",
+    "xtest = scaler.transform(xtest)\n",
+    "\n",
+    "nb = NaiveBayes(param_func=mean_var, prob_func=gauss).fit(xtrain, ytrain)\n",
+    "y_pred = nb.predict(xtest)\n",
+    "(y_pred == ytest).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa184088",
+   "metadata": {},
+   "source": [
+    "We find similar accuracy to the sklearn model"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1326,7 +1582,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c30f2af5f468e7f5b45bcc30fca5f4886c90d54777aed916ed5f6294dfb24bf2"
+   }
   }
  },
  "nbformat": 4,
