make stan code and do some stuff I guess

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -36,7 +36,7 @@
     "    ).transpose(1, 0, 2)\n",
     "\n",
     "    # compute the priors from the counts\n",
-    "    self.priors = np.log(counts/self.n_samples)\n",
+    "    self.class_probs = np.log(counts/self.n_samples)\n",
     "\n",
     "    return self\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "    # compute the probabilities of the samples (...)\n",
     "    probs = np.log(self.prob_func(X, *self.params[:,np.newaxis]))\n",
-    "    return probs.sum(axis=2) + self.priors[np.newaxis]\n",
+    "    return probs.sum(axis=2) + self.class_probs[np.newaxis]\n",
     "\n",
     "  def predict_proba(self, X):\n",
     "    exp_post = np.exp(self.posteriors(X))\n",
